WIP: 관리자 API 임시 저장 (shared 제외)

--- a/@backend/src/main/resources/application.properties
+++ b/@backend/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 spring.application.name=moa2
 
+spring.datasource.url=jdbc:postgresql://ep-late-cell-a10ivmok-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_j1IHRaMuyBJ5
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# SpringDoc OpenAPI (Swagger) 설정
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
 
