Fix: 관리자 기능 보완 및 수정(가격 seats)

--- a/@backend/.gitignore
+++ b/@backend/.gitignore
@@ -36,11 +36,8 @@ out/
 ### VS Code ###
 .vscode/
 
-
-SHOW_API_TABLES.md
-SWAGGER_TEST_GUIDE.md
-TEST_DATA_GUIDE.md
-SHOW_DELETE_TABLES.md
+SAMPLE_DATA.md
+seats_info.md
 
 
 
