--- a/@backend/src/main/resources/application.properties.example
+++ b/@backend/src/main/resources/application.properties.example
@@ -6,68 +6,63 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.defer-datasource-initialization=true
 
-# Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.jdbc.core=DEBUG
-logging.level.org.springframework.security=DEBUG
 
-# SQL Init
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
 spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=true
 
-# File Upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.file-size-threshold=2MB
+
 file.upload-dir=uploads
 file.max-size=10485760
 
-# Server
 server.port=8081
-
-# redirect-uri? Spring Security? ???? ??
-# ?? ??: {baseUrl}/login/oauth2/code/{registrationId}
 
 # OAuth2 - Google
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
 
-spring.security.oauth2.client.timeout.connect=5000
-spring.security.oauth2.client.timeout.read=10000
+# OAuth2 - Kakao
+spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_CLIENT_ID}
+spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_CLIENT_SECRET}
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
 
-
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
 # OAuth2 - Naver
 spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENT_ID}
 spring.security.oauth2.client.registration.naver.client-secret=${NAVER_CLIENT_SECRET}
-spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.naver.scope=name,email,mobile
+spring.security.oauth2.client.registration.naver.scope=name,email
 spring.security.oauth2.client.registration.naver.client-name=Naver
 
-# Naver Provider ?? (??!)
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
-# JWT - Access Token
-jwt.access.secret=${JWT_SECRET}
-jwt.access.expiration=${JWT_EXPIRATION:86400000}
-
-# JWT - Refresh Token
-jwt.refresh.secret=${JWT_REFRESH_SECRET}
-jwt.refresh.expiration=${JWT_REFRESH_EXPIRATION:604800000}
-
-encryption.key=${ENCRYPTION_KEY}
+# JWT
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION:86400000}
